# prac

./: .gitignore  CMakeLists.txt  Makefile  README.md  run_ui
analysis/: graph.py  parse_res.py
assets/: results.txt  results1.txt  results_parsed.csv
assets/data_tables/: results_parsed1.csv
assets/data_tables/dlopen/: 3333333.csv  33333333333333333.csv  33333999.csv  666.csv  6666666.csv  666666666.csv  88888888.csv  9999999.csv  99999999.csv
assets/data_tables/shared/: 3333333.csv  33333333333333333.csv  33333999.csv  6666666.csv  666666666.csv  6767676767.csv  88888888.csv  9999999.csv  99999999.csv
assets/data_tables/static/: 3.csv  3333333.csv  33333999.csv  6666666.csv  666666666.csv  88888888.csv  9999999.csv  99999999.csv  9999999999.csv
assets/raw_res/: dl.txt  dlopen.txt  shared.txt  sizes.txt  static.txt
database_app/: CMakeLists.txt  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake
include/: database.h  factorial.h  search_min.h  student.h  student_backend.h  student_ui.h
scripts/: bench.sh  draw_tree.sh  full_cycle.sh  ldd_tree.sh  parse_and_build_graph.sh  random_name.py  run_all_bench.sh  sizeof_files.sh
src/: database.c  db.c  find_it.c  find_rec.c  main.c  student_back.c  student_ui.c
tests/: bench_dlopen_it.c  bench_dlopen_rec.c  bench_it.c  bench_rec.c
